# django_fastapi

./: .gitignore  docker-compose.local.yml  docker-compose.prod.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/src/category/api/: routers.py  schemas.py
backend/src/category/migrations/: 0001_initial.py
backend/src/core/application/: __init__.py  factory.py  logger.py
backend/src/core/errors/: __init__.py  exceptions.py
backend/src/core/schemas/: base.py
backend/src/product/: models.py
backend/src/product/api/: routers.py  schemas.py
backend/src/product/migrations/: 0001_initial.py
backend/src/server/: api.py  asgi.py
backend/src/server/settings/: base.py  dev.py  prod.py
