[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2,<6.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
dotenv = "^0.9.9"
dj-database-url = "^2.3.0"
asgiref = "^3.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
